--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ install:
   - travis_retry conda env create -n qiime2-2018.6 -q --file qiime2-2018.6-py35-linux-conda.yml
   - rm qiime2-2018.6-py35-linux-conda.yml
   - source activate qiime2-2018.6
+  - pip install flake8
 script:
   - nosetests
   - flake8 evident/* setup.py scripts/qiita*
