--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Install conda packages
         shell: bash -l {0}
-        run: conda install -c conda-forge -c anaconda pandas pytest flake8 pytest-cov statsmodels
+        run: conda install -c conda-forge -c anaconda pandas pytest flake8 pytest-cov statsmodels scikit-bio
 
       - name: Install evident
         shell: bash -l {0}
