--- a/.github/workflows/q2.yml
+++ b/.github/workflows/q2.yml
@@ -1,4 +1,4 @@
-name: Main CI
+name: QIIME2 CI
 
 on:
   pull_request:
@@ -22,10 +22,13 @@ jobs:
           persist-credentials: false
           fetch-depth: 0
 
+      - name: Download Q2 file
+        run: wget -q https://raw.githubusercontent.com/qiime2/environment-files/master/latest/staging/qiime2-latest-py36-linux-conda.yml
+
       - uses: conda-incubator/setup-miniconda@v2
         with:
-          activate-environment: evident
-          python-version: ${{ matrix.python-version }}
+          activate-environment: q2-evident
+          environment-file: qiime2-latest-py36-linux-conda.yml
 
       - name: Install conda packages
         shell: bash -l {0}
