--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Main CI
+name: "Main CI"
 
 on:
   pull_request:
@@ -41,4 +41,4 @@ jobs:
 
       - name: Run tests
         shell: bash -l {0}
-        run: make test
+        run: make standalone_test
