--- a/.github/workflows/q2.yml
+++ b/.github/workflows/q2.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Check style
         shell: bash -l {0}
-        run: make stylecheck
+        run: make q2_stylecheck
 
       - name: Run tests
         shell: bash -l {0}
