--- a/.github/workflows/q2.yml
+++ b/.github/workflows/q2.yml
@@ -3,10 +3,10 @@ name: "QIIME 2 CI"
 on:
   pull_request:
     branches:
-      - main
+      - master
   push:
     branches:
-      - main
+      - master
 
 jobs:
   build:
